// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`successful scenarios accepts CloudFormation parameters 1`] = `
Object {
  "Parameters": Object {
    "BatchSize": Object {
      "Type": "Number",
    },
    "ClusterArn": Object {
      "Type": "String",
    },
    "TopicName": Object {
      "Type": "String",
    },
  },
  "Resources": Object {
    "TestMskConsumer4592A744": Object {
      "DependsOn": Array [
        "TestMskRole86578511",
      ],
      "Properties": Object {
        "Code": Object {
          "ZipFile": "foo",
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "TestMskRole86578511",
            "Arn",
          ],
        },
        "Runtime": "nodejs12.x",
        "Timeout": 60,
      },
      "Type": "AWS::Lambda::Function",
    },
    "TestMskConsumerMapping79C4A58A": Object {
      "Properties": Object {
        "BatchSize": Object {
          "Ref": "BatchSize",
        },
        "Enabled": true,
        "EventSourceArn": Object {
          "Ref": "ClusterArn",
        },
        "FunctionName": Object {
          "Ref": "TestMskConsumer4592A744",
        },
        "StartingPosition": "LATEST",
        "Topics": Array [
          Object {
            "Ref": "TopicName",
          },
        ],
      },
      "Type": "AWS::Lambda::EventSourceMapping",
    },
    "TestMskRole86578511": Object {
      "Metadata": Object {
        "cfn_nag": Object {
          "rules_to_suppress": Array [
            Object {
              "id": "W11",
              "reason": "Actions do not support resource level permissions",
            },
          ],
        },
      },
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "logs:CreateLogGroup",
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:",
                        Object {
                          "Ref": "AWS::Partition",
                        },
                        ":logs:",
                        Object {
                          "Ref": "AWS::Region",
                        },
                        ":",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/*",
                      ],
                    ],
                  },
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "CloudWatchLogsPolicy",
          },
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "kafka:DescribeCluster",
                    "kafka:GetBootstrapBrokers",
                    "ec2:CreateNetworkInterface",
                    "ec2:DescribeNetworkInterfaces",
                    "ec2:DescribeVpcs",
                    "ec2:DeleteNetworkInterface",
                    "ec2:DescribeSubnets",
                    "ec2:DescribeSecurityGroups",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "MskPolicy",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`successful scenarios creates a MSK Lambda consumer 1`] = `
Object {
  "Resources": Object {
    "TestMskConsumer4592A744": Object {
      "DependsOn": Array [
        "TestMskRole86578511",
      ],
      "Properties": Object {
        "Code": Object {
          "ZipFile": "foo",
        },
        "Environment": Object {
          "Variables": Object {
            "MY_ENV_VARIABLE": "foo",
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "TestMskRole86578511",
            "Arn",
          ],
        },
        "Runtime": "nodejs12.x",
        "Timeout": 60,
      },
      "Type": "AWS::Lambda::Function",
    },
    "TestMskConsumerMapping79C4A58A": Object {
      "Properties": Object {
        "BatchSize": 10,
        "Enabled": true,
        "EventSourceArn": "my-cluster-arn",
        "FunctionName": Object {
          "Ref": "TestMskConsumer4592A744",
        },
        "StartingPosition": "LATEST",
        "Topics": Array [
          "my-topic",
        ],
      },
      "Type": "AWS::Lambda::EventSourceMapping",
    },
    "TestMskRole86578511": Object {
      "Metadata": Object {
        "cfn_nag": Object {
          "rules_to_suppress": Array [
            Object {
              "id": "W11",
              "reason": "Actions do not support resource level permissions",
            },
          ],
        },
      },
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "logs:CreateLogGroup",
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:",
                        Object {
                          "Ref": "AWS::Partition",
                        },
                        ":logs:",
                        Object {
                          "Ref": "AWS::Region",
                        },
                        ":",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/*",
                      ],
                    ],
                  },
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "CloudWatchLogsPolicy",
          },
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "kafka:DescribeCluster",
                    "kafka:GetBootstrapBrokers",
                    "ec2:CreateNetworkInterface",
                    "ec2:DescribeNetworkInterfaces",
                    "ec2:DescribeVpcs",
                    "ec2:DeleteNetworkInterface",
                    "ec2:DescribeSubnets",
                    "ec2:DescribeSecurityGroups",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "MskPolicy",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;
